# apiregen

./: .gitignore  .mcp.json  CLAUDE.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: capture.md  investigate.md  mapping.md  recon.md  report.md  schema.md  typegen.md
.github/workflows/: ci.yml  release.yml
src/apiregen/: __init__.py  cli.py  guided.py  har.py  mcp_server.py  project.py  recon.py
src/apiregen/capture/: browser.py  mitmproxy.py
src/apiregen/mcp/: __init__.py  helpers.py  store.py  tools.py
src/apiregen/rendering/: recon.py
tests/: conftest.py
