[project]
name = "apiregen"
version = "0.1.0"
description = "Interactive API reverse engineering toolkit"
requires-python = ">=3.11"
dependencies = [
    "camoufox[geoip]",
    "click",
    "mcp>=1.26.0",
    "rich",
]

[project.scripts]
apiregen = "apiregen.cli:cli"
apiregen-mcp = "apiregen.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
mitmproxy = ["mitmproxy"]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/apiregen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
